Mudança de layout

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,6 @@
 @import url(./header.css);
+@import url(./solucoes.css);
+
 /* Reset and Base Styles */
 * {
     margin: 0;
@@ -18,7 +20,7 @@ html {
 }
 
 body {
-    font-family: "Chakra Petch", sans-serif;
+    font-family: "Teko", sans-serif;
     background-color: var(--color-01);
     color: var(--color-04);
     line-height: 1.6;
@@ -84,12 +86,15 @@ body {
     position: relative;
     overflow: hidden;
     padding: 100px 0 60px;
+    
 }
 
 .hero-bg {
     position: absolute;
     inset: 0;
-    background: linear-gradient(135deg, var(--color-01) 0%, var(--color-02) 50%, var(--color-01) 100%);
+   background: linear-gradient(rgba(0, 0, 0, 0.735), rgba(0, 0, 0, 0.735)), url('../img/bg-hero.jpg') no-repeat center center;
+     background-size: cover;
+    background-attachment: fixed;
 }
 
 .animated-dots {
@@ -118,7 +123,6 @@ body {
 
 .hero-content {
     position: relative;
-    z-index: 10;
     display: grid;
     grid-template-columns: 1fr;
     gap: 60px;
