--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -624,7 +624,7 @@ section {
 
 .about-image {
     background: linear-gradient(135deg, var(--color-02), var(--color-01));
-    border-radius: 16px;
+    border-radius: 5px;
     padding: 32px;
     box-shadow: 0 20px 40px rgba(0, 0, 0, 0.5);
 }
@@ -632,8 +632,11 @@ section {
 .company-display {
     width: 100%;
     height: 320px;
-    background: linear-gradient(135deg, #4a4a4a, #2a2a2a);
-    border-radius: 12px;
+        position: absolute;
+    inset: 0;
+   background: linear-gradient(rgba(58, 58, 58, 0.486), rgba(77, 77, 77, 0.453)), url('../img/7101646_1068.jpg') no-repeat center center;
+     background-size: cover;
+    border-radius: 5px;
     display: flex;
     flex-direction: column;
     align-items: center;
