--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ html {
 }
 
 body {
-    font-family: "Teko", sans-serif;
+    font-family: "Barlow", sans-serif;
     background-color: var(--color-01);
     color: var(--color-04);
     line-height: 1.6;
@@ -130,7 +130,7 @@ body {
 }
 
 .hero-title {
-    font-size: 48px;
+    font-size: 3rem;
     font-weight: 700;
     line-height: 1.2;
     margin-bottom: 24px;
@@ -482,7 +482,9 @@ section {
 
 /* Testimonials Section */
 .testimonials {
-    background-color: var(--color-01);
+    background: linear-gradient(rgba(0, 0, 0, 0.855), rgba(0, 0, 0, 0.855)), url('../img/bg-clientes.jpg') no-repeat center center;
+     background-size: cover;
+    background-attachment: fixed;
 }
 
 .testimonials-grid {
@@ -493,11 +495,11 @@ section {
 }
 
 .testimonial-card {
-    background-color: rgba(42, 42, 42, 0.3);
+    background-color: rgba(42, 42, 42, 0.412);
     backdrop-filter: blur(10px);
-    border-radius: 16px;
+    border-radius: 5px;
     padding: 24px;
-    border: 1px solid rgba(42, 42, 42, 0.2);
+    border: 0.5px solid rgba(255, 255, 255, 0.111);
     transition: all 0.3s ease;
     position: relative;
 }
